# kolosal.cpp

./: CMakeLists.txt  kolosal.cpp  kolosal.h
